--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dwolla-node": "^1.1.2",
     "express": "~4.12.2",
     "jade": "~1.9.2",
+    "monk": "^1.0.1",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
+    "uuid": "^2.0.1"
   }
 }
